--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,101 +1,81 @@
 @import url('https://fonts.googleapis.com/css2?family=Bad+Script&family=Roboto:ital,wght@1,700&display=swap');
 
-* {
-    box-sizing: border-box;
+:root {
+    --primary-red: #e2002b;
+    --primary-black: #29211f;
+    --primary-white: #f3efe9;
+    --primary-teal: #33c5b0;
 }
 
-html body {
-    margin: 0;
+* {
+    box-sizing: border-box;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    margin: 0;
 }
 
 body {
-    background-color: #29211f;
-    color: #f3efe9;
+    font-family: 'Roboto', sans-serif;
+    background-color: var(--primary-black);
+    color: var(--primary-white);
 }
 
-.header {
-    display: flex;
-    font-size: 2rem;
-    padding-left: 20px;
-}
-
-.logo {
-    text-align: right;
-    margin-right: auto;
-}
-
-.logo a {
-    text-decoration: none;
-    color: #f3efe9;
-}
-
-.humanity {
-    color: red;
-    font-family: 'Bad Script', cursive;
-    line-height: 0px;
-}
-
-.header ul {
+ul {
     list-style-type: none;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #e2002b;
-    padding-right: 20px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    box-shadow: 20px 20px #33c5b0;
 }
 
-.main-navbar li {
-    padding-left: 30px;
-}
-
-.header ul a {
+a {
     text-decoration: none;
-    color: #f3efe9;
+    color: var(--primary-white);
 }
 
-.header ul a:hover {
-    text-decoration: none;
-    color: #29211f;
+img {
+    width: 100%;
 }
 
-.header .main-navbar .current-page {
-    color: #33c5b0;
+.navbar {
+    height: 70px;
 }
 
-.icon {
-    display: none;
-}
-
-.main-content {
+.navbar ul {
+    background-color: var(--primary-red);
+    box-shadow: 10px 10px var(--primary-teal);
     display: flex;
-    flex-direction: column;
-    padding-top: 100px;
-    gap: 100px;
 }
 
-.content-row {
+.navbar a {
+    padding: 10px;
+    margin: 0 5px;
+    font-size: 25px;
+}
+
+.navbar a:hover {
+    color: var(--primary-black);
+}
+
+.navbar .current-page {
+    color: var(--primary-teal);
+}
+
+
+.navbar .flex {
+    justify-content: space-between;
+}
+
+.navbar img {
+    width: 60%;
+    min-width: 300px;
+    margin-top: 10px;
+}
+
+.container {
+    margin: 0 auto;
+    padding: 0 40px;
+    max-width: 1300px;
+}
+
+.flex {
     display: flex;
     justify-content: center;
-    gap: 100px;
-    flex: 1;
-    flex-wrap: wrap;
-}
-
-.content-row img {
-    width: 300px;
-}
-
-footer {
-    background-color:#e2002b;
-    color:#f3efe9;
-    padding-top: 20px;
-}
-
-.home-body {
-    margin-top: 100px;
-    margin-bottom: 350px;
+    align-items: center;
+    height: 100%;
 }
