added the about page. set the background to fixed position

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,7 @@ body {
     background-color: var(--primary-black);
     background-repeat: no-repeat;
     background-position: center bottom;
+    background-attachment: fixed;
     color: var(--primary-white);
 }
 
