--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,17 +15,28 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-image: url(../images/background2.png);
-    background-size: 105%;
-    background-color: var(--primary-black);
+    background-image: url(../images/body-background.png);
+    background-size: 30%;
+    background-color: var(--primary-white);
     background-repeat: no-repeat;
-    background-position: center bottom;
+    background-position: right top;
     background-attachment: fixed;
-    color: var(--primary-white);
+    color: var(--primary-black);
+}
+
+.home-page {
+    background-image: url(../images/mandi-kevin-bg.png);
+    background-position: center top;
+    background-size: 100%;
 }
 
 ul {
     list-style-type: none;
+    margin-right: -90px;
+}
+
+#last-nav {
+    margin-right: 50px;
 }
 
 a {
@@ -34,6 +45,11 @@ a {
 }
 
 img {
+    padding-top: 20px;
+    width: 100%;
+}
+
+.logo {
     padding-top: 20px;
     width: 100%;
 }
@@ -79,7 +95,7 @@ img {
 }
 
 .social {
-    background-color: var(--primary-white);
+    background-color: var(--primary-black);
     border-color: var(--primary-red);
     width: 80%;
     gap: 100px;
