--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,7 +77,7 @@ body {
 /* Home Page */
 .home-page {
     background-image: url(../images/home-bg.png);
-    background-position: center center;
+    background-position: top center;
     background-size: 100%;
     display: flex;
     flex-direction: column;
