--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,15 +94,16 @@ body {
 }
 
 .home-info {
-    width: 50%;
+    width: 57%;
     color: var(--primary-white);
     background-color: var(--primary-black);
-    padding: 30px;
+    padding: 55px 55px;
     font-size: 30px;
     text-align: center;
     align-self: end;
-    margin-top: 200px;
-    margin-right: 50px;
+    margin-top: 235px;
+    margin-right: 30px;
+    line-height: 1.5;
 }
 
 /* Episodes Page */
