--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,7 +79,7 @@ body {
 .home-page {
     background-image: url(../images/home-bg.png);
     background-position: top left;
-    background-size: contain;
+    background-size: cover;
     display: flex;
     flex-direction: column;
 }
