--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,12 +39,14 @@ body {
     justify-content: space-between;
     max-width: 100%;
     flex-wrap: wrap;
+    display: flex;
 }
 
 .navbar ul {
     background-color: var(--primary-red);
     box-shadow: 20px 20px var(--primary-teal);
     display: flex;
+    flex-wrap: wrap;
     margin-top: 35px;
     padding-right: 50px;
     list-style-type: none;
@@ -74,6 +76,24 @@ body {
     justify-content: space-between;
 }
 
+@media (max-width: 500px){
+    .navbar ul li a {
+        padding: 0;
+        margin: 0;
+        font-size: 20px;
+    }
+    .navbar {
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    .navbar ul {
+        box-shadow: none;
+        margin-top: 35px;
+        padding-right: 0px;
+        list-style-type: none;
+    }
+}
+
 /* Home Page */
 .home-page {
     background-image: url(../images/home-bg.png);
@@ -87,6 +107,7 @@ body {
     width: 35%;
     align-self: start;
     justify-self: start;
+    min-width: 300px;
 }
 
 .logo img {
@@ -107,13 +128,15 @@ body {
     line-height: 1.5;
 }
 
-@media screen and (max-width: 500px){
+@media (max-width: 500px){
     .home-info{
         align-self: center;
         padding: 10px;
         margin: 0px;
         margin-top: 100px;
         width: 100%;
+        background-color: var(--primary-white);
+        color: var(--primary-black);
     }
     .home-page {
         background-image: none;
@@ -123,7 +146,7 @@ body {
 /* Episodes Page */
 .episodes-page{
     background-image: url(../images/episodes-bg.png);
-    background-position: center center;
+    background-position: top left;
     background-size: 100%;
 }
 
@@ -148,10 +171,29 @@ body {
     float: left;
 }
 
+@media (max-width: 500px){
+    .episodes-content{
+        width: 95%;
+        color: var(--primary-black);
+        font-family: Overthinkers;
+        padding: 30px;
+        font-size: 30px;
+        text-align: center;
+        margin: o;
+        padding: 0;
+    }
+    .home-page {
+        background-image: none;
+    }
+    .episodes-page{
+        background-image: none;
+    }
+}
+
 /* About Page */
 .about-page {
     background-image: url(../images/about-bg.png);
-    background-position: center center;
+    background-position: top;
     background-size: 100%;
 }
 
@@ -257,6 +299,25 @@ body {
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
+}
+
+@media (max-width: 500px){
+    .episodes-content{
+        width: 95%;
+        color: var(--primary-black);
+        font-family: Overthinkers;
+        padding: 30px;
+        font-size: 30px;
+        text-align: center;
+        margin: o;
+        padding: 0;
+    }
+    .home-page {
+        background-image: none;
+    }
+    .episodes-page{
+        background-image: none;
+    }
 }
 
 /* Social Page */
