Fixed sub page on all mobiles

--- a/css/styles.css
+++ b/css/styles.css
@@ -347,6 +347,10 @@ nav a {
         justify-content: space-evenly;
     }
 
+    .subscriptions a {
+        flex-basis: 50%;
+    }
+
     .subscriptions div img {
         width: 100px;
     }
