--- a/styles/styles.css
+++ b/styles/styles.css
@@ -214,7 +214,7 @@ body {
     justify-content: space-evenly;
 }
 
-.subscribe h2 {
+.subscribe p {
     color: var(--primary-red);
     font-family: Overthinkers;
     font-size: 3.5rem;
@@ -351,16 +351,16 @@ body {
     text-align: right;
 }
 
-.top-row h2, .bottom-row h2{
+.amanda, .kevin{
     font-size: 60px;
 }
 
-.top-row p {
+.amanda-desc {
     color: var(--primary-red);
     font-size: 23px;
 }
 
-.bottom-row p {
+.kevin-desc {
     color: var(--primary-teal);
     font-size: 23px;
 }
